--- a/EFDBFirstApp/Web.config
+++ b/EFDBFirstApp/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -16,7 +16,8 @@
   </appSettings>
   <connectionStrings>
     <add name="Udayconn" connectionString="server=.;integrated security=true;database=EFDBFirstDatabase" providerName="System.Data.SqlClient" />
-  <add name="EFDBFirstDatabaseEntities" connectionString="metadata=res://*/Models.EFDBFirstModel.csdl|res://*/Models.EFDBFirstModel.ssdl|res://*/Models.EFDBFirstModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GSPS10SLQ12;initial catalog=EFDBFirstDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="EFDBFirstDatabaseEntities" connectionString="metadata=res://*/Models.EFDBFirstModel.csdl|res://*/Models.EFDBFirstModel.ssdl|res://*/Models.EFDBFirstModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-IJUT692C\SQLEXPRESS;initial catalog=EFDBFirstDatabase;integrated security=True;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1" />
     <httpRuntime targetFramework="4.7.1" />
